--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -7,8 +7,8 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="559dp"
+        android:layout_width="395dp"
+        android:layout_height="601dp"
         android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -50,6 +50,15 @@
             android:layout_marginBottom="8dp"
             android:hint="Email"
             android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/editTextMobile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="8dp"
+            android:hint="Mobile Number"
+            android:inputType="phone" />
 
         <EditText
             android:id="@+id/editTextPassword"
